[package]
name = "wgpu_wasm_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = "28.0.0"
raw-window-handle = "0.6"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
]